[metadata]
name = guide
version = 0.0.8
url = https://github.com/thorwhalen/guide
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Simple object to navigate complex python objects
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = guide

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	i2

